--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}:\
+    ${libs.ejb3-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
