--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.hibernate-support.classpath}:\
-    ${libs.ejb3-persistence.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
